[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/environment_tscn/gate_cellar.gd" type="Script" id=1]
[ext_resource path="res://assets_raw/raw_assets/cellar_wall.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/asset_anims/cellar_wall_fall.tres" type="Animation" id=3]
[ext_resource path="res://assets_raw/raw_assets/cellar_wall_fall.material" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.3227, 4.21155, 1.30281 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 3.11228, 4.21155, 1.30281 )

[node name="CellarGate" type="StaticBody"]
script = ExtResource( 1 )

[node name="cellar_wall" parent="." instance=ExtResource( 2 )]

[node name="cellar_wall_fall" parent="cellar_wall" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.417084, 0 )
material/0 = ExtResource( 4 )

[node name="CellarWallAnimationPlayer" type="AnimationPlayer" parent="cellar_wall"]
anims/cellar_wall_fall = ExtResource( 3 )

[node name="CollisionShapeWall1" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.64158, 3.66807, 1.1443 )
shape = SubResource( 1 )

[node name="CollisionShapeWall2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.9218, 3.66807, 1.1443 )
shape = SubResource( 2 )

[editable path="cellar_wall"]
